--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -18,9 +18,9 @@
             android:id="@+id/item_image"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:contentDescription="@string/model_image" />
 
         <TextView
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/item_image"
+            android:layout_toEndOf="@+id/item_image"
             android:paddingTop="5dp"
             android:textColor="@android:color/white"
             android:textSize="25sp" />
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_title"
-            android:layout_toRightOf="@+id/item_image"
+            android:layout_toEndOf="@+id/item_image"
             android:textColor="@android:color/white" />
 
         <TextView
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_company"
-            android:layout_toRightOf="@+id/item_image"
+            android:layout_toEndOf="@+id/item_image"
             android:textColor="@android:color/white" />
 
         <ImageButton
@@ -64,4 +64,4 @@
 
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
