--- a/app/src/main/res/layout/content_model.xml
+++ b/app/src/main/res/layout/content_model.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -152,7 +152,7 @@
                     style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:editable="false"
+                    android:isIndicator="true"
                     android:numStars="5"
                     android:theme="@style/RatingBar" />
 
@@ -235,7 +235,7 @@
             android:layout_margin="20dp"
             android:background="#ACACAC" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/FeedbackList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -246,4 +246,4 @@
 
     </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
